Clean up docs directory and update codebase with new services and controllers